@@ -27,6 +27,13 @@ This class serves as printout class for HTML documents.
 Constructor. 
 
 
+\membersection{wxHtmlPrintout::AddFilter}\label{wxhtmlprintoutaddfilter}
+
+\func{static void}{AddFilter}{\param{wxHtmlFilter* }{filter}}
+
+Adds a filter to the static list of filters for wxHtmlPrintout. See \helpref{wxHtmlFilter}{wxhtmlfilter} for
+further information.
+
 \membersection{wxHtmlPrintout::SetFonts}\label{wxhtmlprintoutsetfonts}
 
 \func{void}{SetFonts}{\param{wxString }{normal\_face}, \param{wxString }{fixed\_face}, \param{const int }{*sizes = NULL}}
